feat: ensure login stats with submit button disabled

--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -25,6 +25,12 @@
 
     .submit {
       margin-top: 32px;
+
+      &:disabled {
+        color: disabledBackground;
+        background-color: disabledColor;
+        pointer-events: none;
+      }
     }
 
     .link {
