--- a/src/presentation/pages/login/login-styles.scss
+++ b/src/presentation/pages/login/login-styles.scss
@@ -23,14 +23,8 @@
       text-transform: uppercase;
     }
 
-    .submit {
+    button {
       margin-top: 32px;
-
-      &:disabled {
-        color: disabledBackground;
-        background-color: disabledColor;
-        pointer-events: none;
-      }
     }
 
     .link {
