--- a/src/presentation/components/input/input-styles.scss
+++ b/src/presentation/components/input/input-styles.scss
@@ -1,17 +1,61 @@
+@import "../../styles/colors.scss";
+
 .inputWrap {
-  margin-top: 16px;
-  display: flex;
+  margin-top: 20px;
   position: relative;
-  align-items: center;
+  border-bottom: 2px dashed $disabledColor;
+
+  &::after {
+    content: "";
+    width: 100%;
+    height: 2px;
+    background: $primaryLight;
+    position: absolute;
+    bottom: -2px;
+    left: 0;
+    transform-origin: 0%;
+    transform: scaleX(0);
+    transition: transform 0.5s ease;
+  }
+
+  
+  &:focus-within {
+    border-color: transparent;
+
+    &::after {
+      transform: scaleX(1)
+    }
+
+    label {
+      transform: translateY(-20px) scale(0.9);
+    }
+  }
 
   input {
-    flex-grow: 1;
+    width: 100%;
+    line-height: 24px;
+    padding: 0 40px 0 8px;
+
+    &:not(:placeholder-shown) + label {
+      transform: translateY(-20px) scale(0.9);
+    }
+  }
+
+  label {
+    position: absolute;
+    left: 8px;
+    color: $disabledColor;
+    pointer-events: none;
+    
+    transform-origin: 0%;
+    transform: translateY(0);
+    transition: transform 0.5s ease;
   }
 
   .status {
     position: absolute;
     right: 8px;
-    font-size: 12px;
+    font-size: 10px;
     cursor: help;
   }
 }
