--- a/src/presentation/styles/globals.scss
+++ b/src/presentation/styles/globals.scss
@@ -13,14 +13,8 @@ body {
 input[type="text"],
 input[type="password"],
 input[type="email"] {
-  border: 1px solid $primaryLight;
-  line-height: 40px;
-  border-radius: 4px;
-  padding: 0 40px 0 8px;
-
-  &:focus {
-    outline-color: $primaryLight;
-  }
+  border: none;
+  outline: none;
 }
 
 button {
@@ -29,7 +23,7 @@ button {
   border-radius: 8px;
   font-size: 16px;
   border: none;
-  line-height: 60px;
+  line-height: 50px;
   cursor: pointer;
 
   &:hover {
