--- a/src/presentation/components/input/input-styles.scss
+++ b/src/presentation/components/input/input-styles.scss
@@ -5,17 +5,31 @@
   position: relative;
   border-bottom: 2px dashed $disabledColor;
 
+  &[data-status="valid"] {
+    border-bottom-color: $valid;
+    &::after {
+      background: $valid;
+    }
+  }
+
+  &[data-status="invalid"] {
+    border-bottom-color: $invalid;
+    &::after {
+      background: $invalid;
+    }
+  }
+
   &::after {
     content: "";
     width: 100%;
     height: 2px;
-    background: $primaryLight;
+    background: $disabledColor;
     position: absolute;
     bottom: -2px;
     left: 0;
     transform-origin: 0%;
     transform: scaleX(0);
-    transition: transform 0.5s ease;
+    transition: transform 0.4s ease;
   }
 
   
@@ -49,7 +63,7 @@
     
     transform-origin: 0%;
     transform: translateY(0);
-    transition: transform 0.5s ease;
+    transition: transform 0.4s ease;
   }
 
   .status {
